--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <tbody> 
     <tr> 
      <td> <img src="myimg.jpg" style="border-radius:100px" alt="myphoto" width="200px" height="200px"> </td> 
-     <td> <h1>Minhaj Haider</h1> <p><em>Maker of </em><strong><a href="http://www.frontendtuts.ultimatefreehost.in" target="blank">Frontend Tuts</a></strong></p> <p>I am student of <strong>Computer Engineering </strong></p> <p>I am currently learning Web Developement and now i am at <strong>Frontend Level</strong>.</p> </td> 
+     <td> <h1>Minhaj Haider</h1> <p><em>Maker of </em><strong><a href="https://minhaj4me.github.io/frontendtuts" target="blank">Frontend Tuts</a></strong></p> <p>I am student of <strong>Computer Engineering </strong></p> <p>I am currently learning Web Developement and now i am at <strong>Frontend Level</strong>.</p> </td> 
     </tr> 
    </tbody> 
   </table> 
